[gd_scene load_steps=15 format=3 uid="uid://clw8sb0p8webl"]

[ext_resource type="Script" path="res://material_maker/windows/add_node_popup/add_node_popup.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cjcxjmoki7j0n" path="res://material_maker/windows/add_node_popup/quick_button.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://d2aeyi0d5c0rw" path="res://splash_screen/rodz_labs_logo.png" id="3"]

[sub_resource type="Shader" id="11"]
code = "shader_type canvas_item;

uniform bool disabled = false;
uniform float brightness = 0.8;
uniform sampler2D tex;

void fragment() {
	vec4 color = texture(tex, UV);
	if (disabled) {
		color = vec4(vec3(0.4+dot(color.rgb, vec3(0.1))), color.a);
	}
	COLOR = vec4(vec3(1.0), brightness)*color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_88qrb"]
resource_local_to_scene = true
shader = SubResource("11")
shader_parameter/disabled = false
shader_parameter/brightness = 0.8
shader_parameter/tex = ExtResource("3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wwply"]
resource_local_to_scene = true
shader = SubResource("11")
shader_parameter/disabled = false
shader_parameter/brightness = 0.8
shader_parameter/tex = ExtResource("3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h5yl4"]
resource_local_to_scene = true
shader = SubResource("11")
shader_parameter/disabled = false
shader_parameter/brightness = 0.8
shader_parameter/tex = ExtResource("3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xysbp"]
resource_local_to_scene = true
shader = SubResource("11")
shader_parameter/disabled = false
shader_parameter/brightness = 0.8
shader_parameter/tex = ExtResource("3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2fcwt"]
resource_local_to_scene = true
shader = SubResource("11")
shader_parameter/disabled = false
shader_parameter/brightness = 0.8
shader_parameter/tex = ExtResource("3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l7flh"]
resource_local_to_scene = true
shader = SubResource("11")
shader_parameter/disabled = false
shader_parameter/brightness = 0.8
shader_parameter/tex = ExtResource("3")

[sub_resource type="Shader" id="19"]
code = "shader_type canvas_item;

uniform bool disabled = false;
uniform float brightness = 0.8;
uniform sampler2D tex;

void fragment() {
	vec4 color = texture(tex, UV);
	if (disabled) {
		color = vec4(vec3(0.4+dot(color.rgb, vec3(0.1))), color.a);
	}
	COLOR = vec4(vec3(1.0), brightness)*color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s5pxd"]
resource_local_to_scene = true
shader = SubResource("19")
shader_parameter/disabled = false
shader_parameter/brightness = 0.8
shader_parameter/tex = ExtResource("3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_irmk8"]
resource_local_to_scene = true
shader = SubResource("11")
shader_parameter/disabled = false
shader_parameter/brightness = 0.8
shader_parameter/tex = ExtResource("3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nyf2o"]
resource_local_to_scene = true
shader = SubResource("11")
shader_parameter/disabled = false
shader_parameter/brightness = 0.8
shader_parameter/tex = ExtResource("3")

[node name="AddNodePopup" type="Popup"]
transparent_bg = true
size = Vector2i(252, 400)
visible = true
transparent = true
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_type_variation = &"MM_AddNodePanel"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button1" parent="PanelContainer/VBoxContainer/Buttons" instance=ExtResource("2")]
material = SubResource("ShaderMaterial_88qrb")
layout_mode = 2
size_flags_horizontal = 6
default_library_item = "Miscellaneous/Reroute"

[node name="Button2" parent="PanelContainer/VBoxContainer/Buttons" instance=ExtResource("2")]
material = SubResource("ShaderMaterial_wwply")
layout_mode = 2
size_flags_horizontal = 6
default_library_item = "Simple/Shape3D"

[node name="Button3" parent="PanelContainer/VBoxContainer/Buttons" instance=ExtResource("2")]
material = SubResource("ShaderMaterial_h5yl4")
layout_mode = 2
size_flags_horizontal = 6
default_library_item = "Noise/FBM"

[node name="Button4" parent="PanelContainer/VBoxContainer/Buttons" instance=ExtResource("2")]
material = SubResource("ShaderMaterial_xysbp")
layout_mode = 2
size_flags_horizontal = 6
default_library_item = "Filter/Colorize"

[node name="Button5" parent="PanelContainer/VBoxContainer/Buttons" instance=ExtResource("2")]
material = SubResource("ShaderMaterial_2fcwt")
layout_mode = 2
size_flags_horizontal = 6
default_library_item = "Transform3D"

[node name="Button6" parent="PanelContainer/VBoxContainer/Buttons" instance=ExtResource("2")]
material = SubResource("ShaderMaterial_l7flh")
layout_mode = 2
size_flags_horizontal = 6
default_library_item = "Transform3D/Tiler"

[node name="Button7" parent="PanelContainer/VBoxContainer/Buttons" instance=ExtResource("2")]
material = SubResource("ShaderMaterial_s5pxd")
layout_mode = 2
size_flags_horizontal = 6
default_library_item = "Filter/Blend"

[node name="Button8" parent="PanelContainer/VBoxContainer/Buttons" instance=ExtResource("2")]
material = SubResource("ShaderMaterial_irmk8")
layout_mode = 2
size_flags_horizontal = 6
default_library_item = "Filter/Math"

[node name="Button9" parent="PanelContainer/VBoxContainer/Buttons" instance=ExtResource("2")]
material = SubResource("ShaderMaterial_nyf2o")
layout_mode = 2
size_flags_horizontal = 6
default_library_item = "Filter/Normal map"

[node name="Filter" type="LineEdit" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
placeholder_text = "Filter"
clear_button_enabled = true

[node name="List" type="ItemList" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"MM_AddNodePanelList"
fixed_icon_size = Vector2i(18, 18)

[connection signal="object_selected" from="PanelContainer/VBoxContainer/Buttons/Button1" to="." method="add_node"]
[connection signal="object_selected" from="PanelContainer/VBoxContainer/Buttons/Button2" to="." method="add_node"]
[connection signal="object_selected" from="PanelContainer/VBoxContainer/Buttons/Button3" to="." method="add_node"]
[connection signal="object_selected" from="PanelContainer/VBoxContainer/Buttons/Button4" to="." method="add_node"]
[connection signal="object_selected" from="PanelContainer/VBoxContainer/Buttons/Button5" to="." method="add_node"]
[connection signal="object_selected" from="PanelContainer/VBoxContainer/Buttons/Button6" to="." method="add_node"]
[connection signal="object_selected" from="PanelContainer/VBoxContainer/Buttons/Button7" to="." method="add_node"]
[connection signal="object_selected" from="PanelContainer/VBoxContainer/Buttons/Button8" to="." method="add_node"]
[connection signal="object_selected" from="PanelContainer/VBoxContainer/Buttons/Button9" to="." method="add_node"]
[connection signal="gui_input" from="PanelContainer/VBoxContainer/Filter" to="." method="_on_filter_gui_input"]
[connection signal="gui_input" from="PanelContainer/VBoxContainer/List" to="." method="_on_list_gui_input"]
[connection signal="item_activated" from="PanelContainer/VBoxContainer/List" to="." method="_on_list_item_activated"]
[connection signal="item_clicked" from="PanelContainer/VBoxContainer/List" to="." method="_on_list_item_clicked"]
